Fix dynamic component example

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 	<packaging>war</packaging>
 	<name>dynamic-resource-loading-ajax-reproducer</name>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
