--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
-				<jsf.version>2.3.0-m09-SNAPSHOT</jsf.version>
+				<jsf.version>2.3.0-m10-SNAPSHOT</jsf.version>
 				<jsf.impl>Mojarra ${jsf.version}</jsf.impl>
 			</properties>
 			<dependencies>
@@ -79,7 +79,7 @@
 		<profile>
 			<id>pluto-3_0</id>
 			<properties>
-				<jsf.version>2.3.0-m09-SNAPSHOT</jsf.version>
+				<jsf.version>2.3.0-m10-SNAPSHOT</jsf.version>
 				<jsf.impl>Mojarra ${jsf.version}</jsf.impl>
 			</properties>
 			<dependencies>
@@ -93,6 +93,7 @@
 					<groupId>com.liferay.faces</groupId>
 					<artifactId>com.liferay.faces.bridge.impl</artifactId>
 					<version>6.0.0-SNAPSHOT</version>
+					<scope>runtime</scope>
 				</dependency>
 			</dependencies>
 			<build>
